--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 
-  <!-- Write your HTML in this file -->
+<ul>
 
+  <li>Margot</li>
+  <li>Meredith</li>
+  <li>Rose</li>
+</ul>
 </body>
 </html>
-
