automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
 
 <ul>
 
-  <li>Margot</li>
-  <li>Meredith</li>
-  <li>Rose</li>
+  <li>Outerwear</li>
+    <ul>
+      <li>Jackets</li>
+      <li>Cardigan</li>
+      <li>Hoodie</li>
+    </ul>
+  <li>Shoes</li>
+    <ul>
+      <li>Sneakers</li>
+      <li>Heels</li>
+      <li>Sandals</li>
+    </ul>
+  <li>Jewlery</li>
+    <ul>
+      <li>Necklaces</li>
+      <li>Bracelets</li>
+      <li>Rings</li>
+    </ul>
 </ul>
 </body>
 </html>
