automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
 <ul>
 
-  <li>Outerwear</li>
+  <li>Outerwear
     <ul>
       <li>Jackets</li>
       <li>Cardigan</li>
       <li>Hoodie</li>
     </ul>
+  </li>
   <li>Shoes</li>
   <li>Jewlery</li>
 </ul>
