--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
 
 <ul>
 
-  <li>Margot</li>
-  <li>Meredith</li>
-  <li>Rose</li>
+  <li>Outerwear
+    <ul>
+      <li>Jackets</li>
+      <li>Cardigan</li>
+      <li>Hoodie</li>
+    </ul>
+  </li>
+  <li>Shoes</li>
+  <li>Jewlery</li>
 </ul>
+
+<ol>
+
+  <li>Run</li>
+  <li>Eat Dinner</li>
+  <li>Watch A Movie</li>
+</ol>
+
 </body>
 </html>
